<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".WomenHelp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:id="@+id/user_dp"
            android:src="@drawable/protectta_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/help_title"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/emergencyNumbers"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/emergency_tips"
            android:textSize="20sp"
            android:textColor="#000000"
            android:padding="8dp"
            android:background="#FFF3E0"/>

        <TextView
            android:id="@+id/helpTips"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:text="@string/safety_tips"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginTop="50dp"
            android:padding="8dp"
            android:background="#E3F2FD"/>
    </LinearLayout>

</LinearLayout>
